# event-horizon

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  manage.py  nginx.conf  openapi.json  pyproject.toml  requirements.txt  wsgi.py
docs/: db.md  spec.md
event-horizon/: __main__.py
event_horizon/: __init__.py  app.py  commands.py  config.py  errors.py  extensions.py  models.py  types.py  utils.py
event_horizon/api/: __init__.py
event_horizon/api/alert/: schemas.py  views.py
event_horizon/api/auth/: schemas.py  views.py
event_horizon/api/event/: schemas.py  views.py
event_horizon/api/report/: schemas.py  views.py
event_horizon/api/user/: schemas.py  views.py
static/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
static/src/: App.tsx  index.css
static/src/components/: DataTable.tsx  Loader.tsx  Routes.tsx
static/src/hooks/queries/: auth.ts  events.ts  index.ts  users.ts
static/src/lib/: react-auth-store.ts  refresh-api.ts  window.d.ts
static/src/lib/api/: aliases.ts  api.d.ts  index.ts
static/src/pages/: dashboard.tsx  landing.tsx  login.tsx
tests/: conftest.py  test_user.py
